# Trying-to-learn-opengl-c

./: README.md
examples/triangle3d/: CMakeLists.txt  README.md
examples/triangle3d/shaders/: fragment.glsl
examples/triangle3d/src/: main.cpp
